Update title when save image

--- a/Paint/Paint/Paint.csproj
+++ b/Paint/Paint/Paint.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Fluent.Ribbon" Version="9.0.1" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.4.0" />
   </ItemGroup>
 
   <ItemGroup>
