--- a/Paint/Paint/Paint.csproj
+++ b/Paint/Paint/Paint.csproj
@@ -7,16 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Icons\color-wheel.png" />
-    <None Remove="Icons\copy.png" />
-    <None Remove="Icons\cut.png" />
+    <None Remove="Icons\add-image.png" />
+    <None Remove="Icons\add.png" />
+    <None Remove="Icons\create-new.png" />
     <None Remove="Icons\ellipse.png" />
+    <None Remove="Icons\info.png" />
     <None Remove="Icons\line-style.png" />
     <None Remove="Icons\line-width.png" />
     <None Remove="Icons\line.png" />
-    <None Remove="Icons\paste.png" />
+    <None Remove="Icons\logo.png" />
+    <None Remove="Icons\open-bin-file.png" />
+    <None Remove="Icons\paint-palette.png" />
     <None Remove="Icons\rectangle.png" />
     <None Remove="Icons\redo.png" />
+    <None Remove="Icons\save-as.png" />
     <None Remove="Icons\undo.png" />
     <None Remove="Icons\zoom-in.png" />
     <None Remove="Icons\zoom-out.png" />
@@ -32,16 +36,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Icons\color-wheel.png" />
-    <Resource Include="Icons\copy.png" />
-    <Resource Include="Icons\cut.png" />
+    <Resource Include="Icons\add-image.png" />
+    <Resource Include="Icons\add.png" />
+    <Resource Include="Icons\create-new.png" />
     <Resource Include="Icons\ellipse.png" />
+    <Resource Include="Icons\info.png" />
     <Resource Include="Icons\line-style.png" />
     <Resource Include="Icons\line-width.png" />
     <Resource Include="Icons\line.png" />
-    <Resource Include="Icons\paste.png" />
+    <Resource Include="Icons\logo.png" />
+    <Resource Include="Icons\open-bin-file.png" />
+    <Resource Include="Icons\paint-palette.png" />
     <Resource Include="Icons\rectangle.png" />
     <Resource Include="Icons\redo.png" />
+    <Resource Include="Icons\save-as.png" />
     <Resource Include="Icons\undo.png" />
     <Resource Include="Icons\zoom-in.png" />
     <Resource Include="Icons\zoom-out.png" />
